# unified_exo

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  STRUCTURE.md  docker-compose.yml
Exoskeleton_public/: .gitignore  AGENTS.md  CLIENT_CONN_MIGRATION.md  README.md  pyproject.toml
Exoskeleton_public/Cilent/: agent.py  camTest.py  constants.py  detect.py  execCommands.py  main.py  updateData.py  videoDisplay.py
Exoskeleton_public/Microcontroller Codes/AR/: AR.ino
Exoskeleton_public/Server/Web Page/backend/: app.py  constants.py  recvFile.py  videoDisplay.py
Exoskeleton_public/Server/Web Page/backend/comm/: __init__.py  manager.py
Exoskeleton_public/Server/Web Page/html/: ExoClient.html  ExoDashboard.html  MotionControl.html
Exoskeleton_public/Server/Web Page/static/css/: ExoClient.css  ExoDashboard.css  MotionControl.css
Exoskeleton_public/Server/Web Page/static/javascript/: ExoClient.js  ExoDashboard.js  MotionControl.js
Exoskeleton_public/integration/: .gitignore  README.md
Exoskeleton_public/integration/dockerpi/: README.md  client_emulator.py  docker-compose.yml
Exoskeleton_public/integration/dockerpi/dockerpi-extended/: Dockerfile  entrypoint.sh
Exoskeleton_public/integration/dockerpi/scripts/: down.sh  push_runtime.sh  run_client_emulator.sh  run_server.sh  ssh_client.sh  ssh_server.sh  up.sh
Exoskeleton_public/integration/macos/: README.md  run_tests.sh  start_local_stack.sh  stop_local_stack.sh
Exoskeleton_public/integration/macos/tests/: conftest.py  test_backend_routes.py  test_command_video_emulation.py
(+239 files in other folders)
